@@ -66,10 +66,10 @@ class SOA(dns.rdata.Rdata):
         mname = mname.choose_relativity(origin, relativize)
         rname = rname.choose_relativity(origin, relativize)
         serial = tok.get_uint32()
-        refresh = tok.get_uint32()
-        retry = tok.get_uint32()
-        expire = tok.get_uint32()
-        minimum = tok.get_uint32()
+        refresh = tok.get_ttl()
+        retry = tok.get_ttl()
+        expire = tok.get_ttl()
+        minimum = tok.get_ttl()
         tok.get_eol()
         return cls(rdclass, rdtype, mname, rname, serial, refresh, retry,
                    expire, minimum )
